--- a/src/app/pages/candidat/home-candidat/home-candidat.component.html
+++ b/src/app/pages/candidat/home-candidat/home-candidat.component.html
@@ -1,4 +1,5 @@
-<div  *ngIf="!candidat.cv , else modify">
+<body>
+  <div  *ngIf="!candidat.cv , else modify">
     <button (click)="ajoutCV()">ajouter CV</button>
 </div>
 <ng-template #modify>
@@ -18,4 +19,5 @@
         </div>
         
     </div>
-  </div>
+</div>
+</body>
