--- a/src/app/pages/offres/offres.component.css
+++ b/src/app/pages/offres/offres.component.css
@@ -14,13 +14,13 @@ div{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.overflow{
+/*.overflow{
   display:inline-block;
   width:80%;
   white-space: nowrap;
   overflow:hidden !important;
   text-overflow: ellipsis;
-}
+}*/
 
 .blur {
   padding: 5px 10px;
