--- a/src/app/admin/tests/tests.component.html
+++ b/src/app/admin/tests/tests.component.html
@@ -129,7 +129,7 @@
       </p-scrollPanel>
       
       <p>
-        NB: Il faut existe une seule réponse  correcte <br>
+        NB: Il faut existe une seule réponse  correcte pour chaque question <br>
         Les réponses sont fausses par défaut 
       </p>
     </div>
