--- a/src/app/admin/tests/tests.component.css
+++ b/src/app/admin/tests/tests.component.css
@@ -1,6 +1,9 @@
 * {
   font-weight: bold;
 }
+div{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 .question {
   background-color: rgb(108, 154, 255);
@@ -287,7 +290,10 @@
   display: flex;
   justify-content:space-between;
 }
-div{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
+.p-button-rounded:disabled {
+  border: 0px;
+  color: gray;
+  background-color: white;
+  box-shadow: none;
+}
