--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,181 +1,195 @@
-<button class="download-button" (click)="download()">Print 2</button> <br>
-<button  type="button" class="download-button2" icon="pi pi-palette" (click)="op.toggle($event)">Customiser votre cv</button>
+<body>
+  <div class="center">
+    <button pButton pRipple type="button" label="Telecharger" (click)="download()" icon="pi pi-save"
+    class="p-button-rounded download-button"></button>
+  <button pButton pRipple type="button" label="Customiser votre cv" (click)="op.toggle($event)" icon="pi pi-palette"
+    class="p-button-rounded download-button"></button>
+  </div>
 
-<p-overlayPanel #op [showCloseIcon]="true"  [style]="{width: '260px'}">
-  <ng-template pTemplate>
-    <span>color : </span>
-    <p-colorPicker [(ngModel)]="color2"></p-colorPicker> |
-    <span>font color : </span>
-    <p-colorPicker [(ngModel)]="color3"></p-colorPicker>
+  <p-overlayPanel #op [showCloseIcon]="true" [style]="{width: '260px'}">
+    <ng-template pTemplate>
+      <span>color : </span>
+      <p-colorPicker [(ngModel)]="color2"></p-colorPicker> |
+      <span>font color : </span>
+      <p-colorPicker [(ngModel)]="color3"></p-colorPicker>
 
 
-  </ng-template>
-</p-overlayPanel>
+    </ng-template>
+  </p-overlayPanel>
 
-<div id="cv" class="resume">
-  <div style="background-color: {{color2}}" class="resume_left">
-    <div class="resume_profile">
-      <img src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585" alt="jnayah" width="40px" height="40px">
-    </div>
-    <div class="resume_content">
-      <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_info">
-        <div class="title">
-          <p  class="bold">Mourad Slim Jnayah</p>
-          <p class="regular" style="color: {{color3}};">Developper</p>
-        </div>
-        <ul>
-          <li><div class="icon"><i style="color: {{color3}};"   class="las la-map-marked-alt"></i></div>
-              <div style="color: {{color3}};"  class="data">Sidi hssin <br> Tunisia</div>
-          </li>
-          <li><div class="icon"><i style="color: {{color3}};"   class="las la-phone-volume"></i></div>
-            <div style="color: {{color3}};"   class="data">+216 51 202 478</div>
-          </li>
-          <li><div class="icon"><i style="color: {{color3}};"   class="las la-envelope-open"></i></div>
-            <div style="color: {{color3}};"   class="data">Mourad@gmail.com</div>
-          </li>
-          <li><div class="icon"><i style="color: {{color3}};"   class="lab la-chrome"></i></div>
-            <div style="color: {{color3}};"   class="data">www.jnayah.com</div>
-          </li>
-        </ul>
+  <div id="cv" class="resume">
+    <div style="background-color: {{color2}}" class="resume_left">
+      <div class="resume_profile">
+        <img
+          src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585"
+          alt="jnayah" width="40px" height="40px">
       </div>
-      <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_skills">
-        <div class="title">
-          <p class="bold">Skills</p>
-        </div>
-        <div>
+      <div class="resume_content">
+        <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_info">
+          <div class="title">
+            <p class="bold">Mourad Slim Jnayah</p>
+            <p class="regular" style="color: {{color3}};">Developper</p>
+          </div>
           <ul>
-            <li style="color: {{color3}};"  >
-              <div  class="skill_name">
-                HTML
-              </div>
-              <div class="skill_progress">
-                <span style="width: 80%"></span>
-              </div>
-              <div class="skill_per">80%</div>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="las la-map-marked-alt"></i></div>
+              <div style="color: {{color3}};" class="data">Sidi hssin <br> Tunisia</div>
             </li>
-            <li style="color: {{color3}};"  >
-              <div class="skill_name">
-                CSS
-              </div>
-              <div class="skill_progress">
-                <span style="width: 70%"></span>
-              </div>
-              <div class="skill_per">70%</div>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="las la-phone-volume"></i></div>
+              <div style="color: {{color3}};" class="data">+216 51 202 478</div>
             </li>
-            <li style="color: {{color3}};"  >
-              <div class="skill_name">
-                Angular
-              </div>
-              <div class="skill_progress">
-                <span style="width: 50%"></span>
-              </div>
-              <div class="skill_per">50%</div>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="las la-envelope-open"></i></div>
+              <div style="color: {{color3}};" class="data">Mourad@gmail.com</div>
             </li>
-            <li style="color: {{color3}};"  >
-              <div class="skill_name">
-                Laravel
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="lab la-chrome"></i></div>
+              <div style="color: {{color3}};" class="data">www.jnayah.com</div>
+            </li>
+          </ul>
+        </div>
+        <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_skills">
+          <div class="title">
+            <p class="bold">Skills</p>
+          </div>
+          <div>
+            <ul>
+              <li style="color: {{color3}};">
+                <div class="skill_name">
+                  HTML
+                </div>
+                <div class="skill_progress">
+                  <span style="width: 80%"></span>
+                </div>
+                <div class="skill_per">80%</div>
+              </li>
+              <li style="color: {{color3}};">
+                <div class="skill_name">
+                  CSS
+                </div>
+                <div class="skill_progress">
+                  <span style="width: 70%"></span>
+                </div>
+                <div class="skill_per">70%</div>
+              </li>
+              <li style="color: {{color3}};">
+                <div class="skill_name">
+                  Angular
+                </div>
+                <div class="skill_progress">
+                  <span style="width: 50%"></span>
+                </div>
+                <div class="skill_per">50%</div>
+              </li>
+              <li style="color: {{color3}};">
+                <div class="skill_name">
+                  Laravel
+                </div>
+                <div class="skill_progress">
+                  <span style="width: 40%"></span>
+                </div>
+                <div class="skill_per">40%</div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_social">
+          <div class="title">
+            <p class="bold">SOCIAL</p>
+          </div>
+          <ul>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="lab la-facebook-f"></i></div>
+              <div style="color: {{color3}};" class="data">
+                <p class="semi_bold">
+                  Facebook
+                </p>
+                <p>Jnayah yelaab trayah</p>
               </div>
-              <div class="skill_progress">
-                <span style="width: 40%"></span>
+            </li>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="lab la-twitter"></i></div>
+              <div style="color: {{color3}};" class="data">
+                <p class="semi_bold">
+                  Twitter
+                </p>
+                <p>Mourad ychabah l brad</p>
               </div>
-              <div class="skill_per">40%</div>
+            </li>
+            <li>
+              <div class="icon"><i style="color: {{color3}};" class="lab la-discord"></i></div>
+              <div style="color: {{color3}};" class="data">
+                <p class="semi_bold">
+                  Discord
+                </p>
+                <p>XxxTentationJnayahxxX</p>
+              </div>
             </li>
           </ul>
         </div>
       </div>
-      <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_social">
+
+    </div>
+
+    <div class="resume_right">
+      <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_about">
         <div class="title">
-          <p class="bold">SOCIAL</p>
+          <p style="color: {{color2}}" class="bold">About us</p>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis illo fugit officiis distinctio culpa
+          officia totam atque exercitationem inventore repudiandae?</p>
+      </div>
+      <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_work">
+        <div class="title">
+          <p style="color: {{color2}}" class="bold">Work Experience</p>
         </div>
         <ul>
           <li>
-            <div class="icon"><i style="color: {{color3}};"   class="lab la-facebook-f"></i></div>
-            <div style="color: {{color3}};"   class="data">
-              <p class="semi_bold">
-                Facebook
-              </p>
-              <p>Jnayah yelaab trayah</p>
+            <div class="date">2013 - 2015</div>
+            <div class="info">
+              <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
             </div>
           </li>
           <li>
-            <div class="icon"><i style="color: {{color3}};"   class="lab la-twitter"></i></div>
-            <div  style="color: {{color3}};"  class="data">
-              <p class="semi_bold">
-                Twitter
-              </p>
-              <p>Mourad ychabah l brad</p>
+            <div class="date">2015 - 2017</div>
+            <div class="info">
+              <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
             </div>
           </li>
           <li>
-            <div class="icon"><i style="color: {{color3}};"   class="lab la-discord"></i></div>
-            <div style="color: {{color3}};"   class="data">
-              <p class="semi_bold">
-                Discord
-              </p>
-              <p>XxxTentationJnayahxxX</p>
+            <div class="date">2017 - Present</div>
+            <div class="info">
+              <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div style="border-bottom: 2px solid {{color3}};" class="resume_item resume_education">
+        <div class="title">
+          <p style="color: {{color2}}" class="bold">Education</p>
+        </div>
+        <ul>
+          <li>
+            <div class="date">2010 - 2013</div>
+            <div class="info">
+              <p class="semi-bold">Web Designing (Texas University)</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+            </div>
+          </li>
+          <li>
+            <div class="date">2000 - 2010</div>
+            <div class="info">
+              <p class="semi-bold">Texas International School</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
             </div>
           </li>
         </ul>
       </div>
     </div>
-
   </div>
 
-  <div class="resume_right">
-    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_about">
-      <div class="title">
-        <p style="color: {{color2}}"  class="bold">About us</p>
-      </div>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis illo fugit officiis distinctio culpa officia totam atque exercitationem inventore repudiandae?</p>
-    </div>
-    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_work">
-      <div class="title">
-        <p style="color: {{color2}}"   class="bold">Work Experience</p>
-      </div>
-      <ul>
-        <li>
-          <div class="date">2013 - 2015</div>
-          <div class="info">
-            <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-          </div>
-        </li>
-        <li>
-          <div class="date">2015 - 2017</div>
-          <div class="info">
-            <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-          </div>
-        </li>
-        <li>
-          <div class="date">2017 - Present</div>
-          <div class="info">
-            <p class="semi-bold">Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div style="border-bottom: 2px solid {{color3}};"  class="resume_item resume_education">
-      <div class="title">
-        <p style="color: {{color2}}"   class="bold">Education</p>
-      </div>
-      <ul>
-        <li>
-          <div class="date">2010 - 2013</div>
-          <div class="info">
-            <p class="semi-bold">Web Designing (Texas University)</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-          </div>
-        </li>
-        <li>
-          <div class="date">2000 - 2010</div>
-          <div class="info">
-            <p class="semi-bold">Texas International School</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+</body>
