--- a/src/app/pages/employeur/candidatures/candidatures.component.html
+++ b/src/app/pages/employeur/candidatures/candidatures.component.html
@@ -1,5 +1,247 @@
-<div class="root">
+<!-- CADIDATURE MODAL -->
+<div id="candidatureModal" class="CVmodal">
+  <div class="CVmodal-content">
+    <div class="p-justify-right">
+      <button pButton pRipple type="button" (click)="CandidatureCancel()" icon="pi pi-times"
+        class="p-button-danger p-button-rounded p-button-text "></button>
+    </div>
+    <p-scrollPanel [style]="{width: '100%', height: '70vh'}">
+      <div class="description-card">
+        <div class="description-title">
+          Lettre de motivation : </div>
 
+        <div [innerHTML]="displayed_candidature.lettre_motivation"></div>
+      </div>
+      <div class="description-card no-border">
+        <div class="description-title">
+          CV : </div>
+      </div>
+      <p-scrollPanel [style]="{width: '100%', height: '70vh'}">
+        <pdf-viewer [src]=" displayed_candidature.cv " [render-text]="true" style="display: block;"></pdf-viewer>
+      </p-scrollPanel>
+    </p-scrollPanel>
+  </div>
+</div>
+
+<!-- CANDIDAT MODAL -->
+<div id="candidatModal" class="CVmodal">
+  <div class="CVmodal-content">
+    <div class="p-justify-right">
+      <button pButton pRipple type="button" (click)="CandidatCancel()" icon="pi pi-times"
+        class="p-button-danger p-button-rounded p-button-text "></button>
+    </div>
+    <p-scrollPanel [style]="{width: '100%', height: '80vh'}">
+      <app-candidat-profile *ngIf="displayed_candidat.id" [candidat]="displayed_candidat" ></app-candidat-profile>
+    </p-scrollPanel>
+  </div>
+</div>
+
+<!-- Critique FORM -->
+<div id="critiqueForm" class="CritiqueModal">
+  <form id="form" class="CritiqueModal-content">
+    <div class="p-justify-right">
+      <button pButton pRipple type="button" (click)="CritiqueCancel()" icon="pi pi-times"
+        class="p-button-danger p-button-rounded p-button-text "></button>
+    </div>
+    <div class="p-fluid">
+      <div class="p-field">
+        <label for="critique">Critique</label>
+
+        <textarea id="critique" name="critique" required pInputTextarea class="input" [rows]="6"
+          [(ngModel)]="add_critique.critique" #critique="ngModel"
+          [ngClass]="(critique.dirty && critique.invalid)"></textarea>
+
+        <small class="p-error" *ngIf="(critique.dirty && critique.invalid)">Contenu est requis.</small>
+      </div>
+    </div>
+    <div class="p-grid p-nogutter p-justify-right">
+      <button pButton pRipple type="button" label="Ajouter" (click)="AddCritique(add_critique)" icon="pi pi-check"
+        class="p-button-rounded p-button-text "></button>
+    </div>
+  </form>
+</div>
+
+
+
+<div class="root">
+  <div class="board" cdkDropListGroup>
+
+    <div class="board-bar">
+      <p class="board-name "> Tableau des candidatures</p>
+    </div>
+
+    <div class="p-justify-between">
+      <div class="board-wrapper ">
+
+        <div class="board-columns">
+
+          <div class="board-column column-limit">
+            <div class="column-title">
+              Non selectionés
+            </div>
+
+            <div class="candidatures-container" cdkDropList [cdkDropListData]="not_selected_candidatures"
+              (cdkDropListDropped)="drop($event)">
+              <div class="candidature" *ngFor="let candidature of not_selected_candidatures" cdkDrag>
+
+                <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+                <div class="p-justify-around">
+
+                  <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text"
+                    style="color: #0bb5f5;" (click)="CandidatDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                  <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text"
+                    style="color: #0bf4cd;" (click)="CandidatureDialog(candidature)"
+                    pTooltip="Afficher candidature"></button>
+
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div class="board-wrapper">
+
+          <div class="board-columns">
+
+            <div class="board-column column-limit">
+              <div class="column-title">
+                Selectionés
+              </div>
+
+              <div class="candidatures-container" cdkDropList [cdkDropListData]="selected_candidatures"
+                (cdkDropListDropped)="drop($event)">
+                <div class="candidature" *ngFor="let candidature of selected_candidatures" cdkDrag>
+
+                  <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+                  <div class="p-justify-around">
+
+                    <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bb5f5;" (click)="CandidatDialog(candidature)"
+                      pTooltip="Afficher candidat"></button>
+
+                    <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bf4cd;" (click)="CandidatureDialog(candidature)"
+                      pTooltip="Afficher candidature"></button>
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+            <div class="board-column column-limit">
+              <div class="column-title">
+                à l'etude
+              </div>
+
+              <div class="candidatures-container" cdkDropList [cdkDropListData]="in_review_candidatures"
+                (cdkDropListDropped)="drop($event)">
+                <div class="candidature" *ngFor="let candidature of in_review_candidatures" cdkDrag>
+                  <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+                  <div class="p-justify-around">
+
+                    <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bb5f5;" (click)="CandidatDialog(candidature)"
+                      pTooltip="Afficher candidat"></button>
+
+                    <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bf4cd;" (click)="CandidatureDialog(candidature)"
+                      pTooltip="Afficher candidature"></button>
+
+                    <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                      class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                      pTooltip="Crtiquer candidat"></button>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="board-wrapper">
+
+          <div class="board-columns">
+
+            <div class="board-column column-limit">
+              <div class="column-title">
+                Acceptés
+              </div>
+
+              <div class="candidatures-container" cdkDropList [cdkDropListData]="accepted_candidatures"
+                (cdkDropListDropped)="drop($event)">
+                <div class="candidature" *ngFor="let candidature of accepted_candidatures" cdkDrag>
+                  <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+                  <div class="p-justify-around">
+
+                    <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bb5f5;" (click)="CandidatDialog(candidature)"
+                      pTooltip="Afficher candidat"></button>
+
+                    <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bf4cd;" (click)="CandidatureDialog(candidature)"
+                      pTooltip="Afficher candidature"></button>
+
+                    <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                      class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                      pTooltip="Crtiquer candidat"></button>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="board-column column-limit">
+              <div class="column-title">
+                Rejetés
+              </div>
+
+              <div class="candidatures-container" cdkDropList [cdkDropListData]="rejected_candidatures"
+                (cdkDropListDropped)="drop($event)">
+                <div class="candidature" *ngFor="let candidature of rejected_candidatures" cdkDrag>
+                  <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+                  <div class="p-justify-around">
+
+                    <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bb5f5;" (click)="CandidatDialog(candidature)"
+                      pTooltip="Afficher candidat"></button>
+
+                    <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text"
+                      style="color: #0bf4cd;" (click)="CandidatureDialog(candidature)"
+                      pTooltip="Afficher candidature"></button>
+
+                    <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                      class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                      pTooltip="Crtiquer candidat"></button>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+
+<!-- <div class="root">
   <div class="board" cdkDropListGroup>
 
     <div class="board-bar">
@@ -7,87 +249,141 @@
     </div>
 
     <div class="board-wrapper">
+      <div class="board-columns">
 
-      <div class="board-columns" >
         <div class="board-column">
-
           <div class="column-title">
             Non selectionés
           </div>
 
-          <div class="tasks-container" cdkDropList [cdkDropListData]="not_selected_candidatures"
+          <div class="candidatures-container" cdkDropList [cdkDropListData]="not_selected_candidatures"
             (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let candidature of not_selected_candidatures" cdkDrag>
-              {{ candidature.lettre_motivation }}
+            <div class="candidature" *ngFor="let candidature of not_selected_candidatures" cdkDrag>
+
+              <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+              <div class="p-justify-around">
+
+                <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bb5f5;"
+                  (click)="CritiqueDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bf4cd;"
+                  (click)="CandidatureDialog(candidature)" pTooltip="Afficher candidature"></button>
+
+              </div>
+
             </div>
           </div>
         </div>
 
         <div class="board-column">
-
           <div class="column-title">
             Selectionés
           </div>
 
-          <div class="tasks-container" cdkDropList [cdkDropListData]="selected_candidatures"
+          <div class="candidatures-container" cdkDropList [cdkDropListData]="selected_candidatures"
             (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let candidature of selected_candidatures" cdkDrag>
-              {{ candidature.lettre_motivation }}
+            <div class="candidature" *ngFor="let candidature of selected_candidatures" cdkDrag>
+
+              <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+              <div class="p-justify-around">
+
+                <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bb5f5;"
+                  (click)="CandidatDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bf4cd;"
+                  (click)="CandidatureDialog(candidature)" pTooltip="Afficher candidature"></button>
+
+              </div>
+
             </div>
           </div>
         </div>
 
         <div class="board-column">
-
           <div class="column-title">
             à l'etude
           </div>
 
-          <div class="tasks-container" cdkDropList [cdkDropListData]="in_review_candidatures"
+          <div class="candidatures-container" cdkDropList [cdkDropListData]="in_review_candidatures"
             (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let candidature of in_review_candidatures" cdkDrag>
-              {{ candidature.lettre_motivation }}
+            <div class="candidature" *ngFor="let candidature of in_review_candidatures" cdkDrag>
+              <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+              <div class="p-justify-around">
+
+                <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bb5f5;"
+                  (click)="CandidatDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bf4cd;"
+                  (click)="CandidatureDialog(candidature)" pTooltip="Afficher candidature"></button>
+
+                <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                  class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                  pTooltip="Crtiquer candidat"></button>
+
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-    </div>
-    <div class="board-wrapper">
-
-      <div class="board-columns">
 
         <div class="board-column">
-
           <div class="column-title">
             Acceptés
           </div>
 
-          <div class="tasks-container" cdkDropList [cdkDropListData]="accepted_candidatures"
+          <div class="candidatures-container" cdkDropList [cdkDropListData]="accepted_candidatures"
             (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let candidature of accepted_candidatures" cdkDrag>
-              {{ candidature.lettre_motivation }}
+            <div class="candidature" *ngFor="let candidature of accepted_candidatures" cdkDrag>
+              <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+              <div class="p-justify-around">
+
+                <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bb5f5;"
+                  (click)="CandidatDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bf4cd;"
+                  (click)="CandidatureDialog(candidature)" pTooltip="Afficher candidature"></button>
+
+                <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                  class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                  pTooltip="Crtiquer candidat"></button>
+
+              </div>
             </div>
           </div>
         </div>
 
         <div class="board-column">
-
           <div class="column-title">
             Rejetés
           </div>
 
-          <div class="tasks-container" cdkDropList [cdkDropListData]="rejected_candidatures"
+          <div class="candidatures-container" cdkDropList [cdkDropListData]="rejected_candidatures"
             (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let candidature of rejected_candidatures" cdkDrag>
-              {{ candidature.lettre_motivation }}
+            <div class="candidature" *ngFor="let candidature of rejected_candidatures" cdkDrag>
+              <div>{{ candidature.candidat.nom | titlecase }}</div>
+
+              <div class="p-justify-around">
+
+                <button icon="pi pi-user" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bb5f5;"
+                  (click)="CandidatDialog(candidature)" pTooltip="Afficher candidat"></button>
+
+                <button icon="pi pi-eye" pButton pRipple class="p-button-rounded p-button-text" style="color: #0bf4cd;"
+                  (click)="CandidatureDialog(candidature)" pTooltip="Afficher candidature"></button>
+
+                <button icon="pi pi-comment" [disabled]="candidature.critique" pButton pRipple
+                  class="p-button-rounded p-button-warning p-button-text" (click)="CritiqueDialog(candidature)"
+                  pTooltip="Crtiquer candidat"></button>
+
+              </div>
             </div>
           </div>
         </div>
 
       </div>
-
     </div>
   </div>
-
-</div>
+</div> -->
