--- a/src/app/pages/employeur/candidatures/candidatures.component.scss
+++ b/src/app/pages/employeur/candidatures/candidatures.component.scss
@@ -1,197 +1,369 @@
-*{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  .root {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width:100%
-  }
-  
-  .app-name {
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .has-gradient-text {
-    background: -webkit-radial-gradient(rgb(69, 127, 252),rgb(28, 132, 250));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  
-  .board {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-  
-    // Override Automatic Minimum Size
-    // https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size
-    min-width: 0;
-    min-height: 0;
-  
-    .board-bar {
-      width: fit-content;
-      margin: auto;
-      background: rgba(gray, 0.5);
-      padding: 8px 60px;
-      border-radius: 20px;
-      align-items: center;
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%
+}
+
+.app-name {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.has-gradient-text {
+  background: -webkit-radial-gradient(rgb(69, 127, 252), rgb(28, 132, 250));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.board {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+
+  // Override Automatic Minimum Size
+  // https://stackoverflow.com/questions/36247140/why-dont-flex-items-shrink-past-content-size
+  min-width: 0;
+  min-height: 0;
+
+  .board-bar {
+    width: fit-content;
+    margin: auto;
+    background: rgba(gray, 0.5);
+    padding: 8px 60px;
+    border-radius: 20px;
+    align-items: center;
+    text-align: center;
+
+    .board-name {
+      font-size: 20px;
+      font-weight: bold;
+      text-transform: uppercase;
       text-align: center;
-  
-      .board-name {
-        font-size: 20px;
-        font-weight: bold;
-        text-transform: uppercase;
-        text-align: center;
-        color: white;
-      }
+      color: white;
     }
-  
-    .board-wrapper {
+  }
+
+
+  .board-wrapper {
+    display: flex;
+
+    flex-grow: 1;
+    overflow-x: auto;
+    border-radius: 20px;
+
+    .board-columns {
       display: flex;
       flex-grow: 1;
-      overflow-x: auto;
-      border-radius: 20px;
-  
-      .board-columns {
-        display: flex;
-        flex-grow: 1;
-  
-        .board-column {
-          
-          display: flex;
-          flex-direction: column;
-          flex-grow: 1;
-          flex-basis: 0; // to force the columns to all be the same size, regardless of content
 
-          min-height: 100px;
-          margin: 30px 12px 0px 12px;
-          padding-top: 25px;
-          text-align: center;
-  
-          border-radius: 20px;
-  
-          background: rgba(white, 0.5);
-          backdrop-filter: blur(80px);
-  
-          .column-title {
-            font-size: 20px;
-            font-weight: 800;        
-            margin-bottom: 25px;
-            font-family: 'Lato', sans-serif;
-            text-transform: uppercase;
-          }
+      .board-column {
+
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        flex-basis: 0; // to force the columns to all be the same size, regardless of content
+
+        min-height: 200px;
+        margin: 30px 12px 0px 12px;
+        padding-top: 25px;
+        text-align: center;
+
+        border-radius: 20px;
+
+        background: rgba(white, 0.5);
+        backdrop-filter: blur(80px);
+
+        .column-title {
+          font-size: 20px;
+          font-weight: 800;
+          margin-bottom: 25px;
+          font-family: 'Lato', sans-serif;
+          text-transform: uppercase;
         }
       }
     }
   }
-  
-  
-  .tasks-container {
-    flex-grow: 1;
-    overflow-y: auto;
-  }
-  
-  .task {
-    display: flex;
-    margin: 0px 25px 25px 25px;
-    padding: 15px 12px;
-    background: white;
-    border-bottom: solid 1px #ddd;
-    border-radius: 10px;
-  
-    margin-bottom: 15px;
-  
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
+}
+
+.column-limit {
+  min-width: 30vw;
+}
+
+
+.candidatures-container {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.candidature {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 25px 25px 25px;
+  padding: 15px 12px;
+  background: white;
+  border-bottom: solid 1px #ddd;
+  border-radius: 10px;
+
+  margin-bottom: 15px;
+
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
     0 3px 14px 2px rgba(0, 0, 0, 0.05);
-  }
-  
-  .cdk-drag-preview {
-    box-sizing: border-box;
-    border-radius: 20px;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  text-align: center;
+  border-radius: 20px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14),
     0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.candidatures-container.cdk-drop-list-dragging .candidature:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+:host ::ng-deep .drag-column {
+  padding-right: .5em;
+}
+
+.drop-column {
+  border: 1px solid transparent;
+  transition: border-color .2s;
+
+  &.p-draggable-enter {
+    border-color: var(--primary-color);
   }
-  
-  .cdk-drag-placeholder {
+}
+
+.product-item {
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+  width: 100%;
+  border-bottom: 1px solid var(--surface-d);
+
+  img {
+    width: 75px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    margin-right: 1rem;
+  }
+
+  .product-list-detail {
+    flex: 1 1 0;
+  }
+
+  .product-list-action {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .product-category-icon {
+    vertical-align: middle;
+    margin-right: .5rem;
+  }
+
+  .product-category {
+    vertical-align: middle;
+    line-height: 1;
+  }
+}
+
+[pDraggable] {
+  cursor: move;
+}
+
+@media screen and (max-width: 576px) {
+  .product-item {
+    flex-wrap: wrap;
+
+    .image-container {
+      width: 100%;
+      text-align: center;
+    }
+
+    img {
+      margin: 0 0 1rem 0;
+      width: 100px;
+    }
+  }
+}
+
+
+/* The Modal (background) */
+.CVmodal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  backdrop-filter: blur(10px);
+  z-index: 100;
+  /* Sit on top */
+  padding-top: 10vh;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+/* Modal Content */
+.CVmodal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 60%;
+  animation: fadeIn 0.3s;
+
+}
+
+/* The Modal (background) */
+.CritiqueModal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  backdrop-filter: blur(10px);
+  z-index: 100;
+  /* Sit on top */
+  padding-top: 20vh;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+/* Modal Content */
+.CritiqueModal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 60%;
+  animation: fadeIn 0.3s;
+
+}
+
+@keyframes fadeInModal {
+  0% {
     opacity: 0;
   }
-  
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
+  100% {
+    opacity: 1;
   }
-  
-  .tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
   }
-  
-  
-  :host ::ng-deep .drag-column {
-    padding-right: .5em;
+
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
   }
-  
-  .drop-column {
-    border: 1px solid transparent;
-    transition: border-color .2s;
-  
-    &.p-draggable-enter {
-      border-color: var(--primary-color);
-    }
-  }
-  
-  .product-item {
-    display: flex;
-    align-items: center;
-    padding: .5rem;
-    width: 100%;
-    border-bottom: 1px solid var(--surface-d);
-  
-    img {
-      width: 75px;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-      margin-right: 1rem;
-    }
-  
-    .product-list-detail {
-      flex: 1 1 0;
-    }
-  
-    .product-list-action {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-    }
-  
-    .product-category-icon {
-      vertical-align: middle;
-      margin-right: .5rem;
-    }
-  
-    .product-category {
-      vertical-align: middle;
-      line-height: 1;
-    }
-  }
-  
-  [pDraggable] {
-    cursor: move;
-  }
-  
-  @media screen and (max-width: 576px) {
-    .product-item {
-      flex-wrap: wrap;
-  
-      .image-container {
-        width: 100%;
-        text-align: center;
-      }
-  
-      img {
-        margin: 0 0 1rem 0;
-        width: 100px;
-      }
-    }
-  }
-  
+
+}
+
+.description-card {
+  background: hsla(0, 0%, 100%, 0.800);
+  backdrop-filter: blur(30px);
+  min-height: 10vh;
+  height: fit-content;
+  width: 98%;
+  padding: 10px;
+  margin: 20px 1%;
+  margin-top: 1%;
+  border-radius: 20px;
+  border: 1px #9de6fc solid;
+}
+
+.no-border{
+  border: none;
+}
+
+.description-title{
+  color: #3771bd;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.p-justify-around {
+  display: flex;
+  justify-content: space-around;
+}
+
+.p-justify-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  margin: 1px 5px;
+  top: 2;
+  z-index: 50;
+}
+
+.input {
+  padding: 5px 15px;
+  border-radius: 25px;
+  margin: 5px;
+}
+
+label{
+  padding: 5px 10px;
+}
+
+.p-button-rounded:disabled {
+  border: 0px;
+  color: gray;
+  background-color: white;
+  box-shadow: none;
+}
+
