--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -119,6 +119,11 @@ header{
   margin-right: 1rem;
 }
 
+.user-wrapper img:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .user-wrapper small {
   display: inline-block;
   color: #d3d7db;
