--- a/src/app/pages/employeur/home/home.component.html
+++ b/src/app/pages/employeur/home/home.component.html
@@ -13,6 +13,7 @@
   </div>
   <div class="sidebar-menu">
     <ul>
+      <li><a  [routerLink]="['/employeur/home']"   routerLinkActive="active"><span class="lar la-chart-bar"></span><span>Dashboard</span></a></li>
       <li><a  [routerLink]="['/employeur/profil']"   routerLinkActive="active"><span class="las la-user-circle"></span><span>Gestion Profile</span></a></li>
       <li><a [routerLink]="['/employeur/offres']"  routerLinkActive="active"><span class="las la-clipboard-list"></span><span>Gestion Offres</span></a></li>
     </ul>
@@ -29,10 +30,10 @@
     </h2>
 
     <div class="user-wrapper">
-      <img (click)="signOut()" src="{{employeur.logo}}" width="40px" height="40px">
+      <img (click)="signOut()" pTooltip src="{{employeur.logo}}" width="40px" height="40px">
       <div>
-        <h4>{{employeur.nom}}</h4>
-        <small>{{employeur.telephone}}</small>
+        <h4>{{employeur.nom_entreprise}}</h4>
+        <!-- <small>{{employeur.telephone}}</small> -->
       </div>
 
     </div>
