--- a/src/app/pages/gestion-cv/gestion-personal-info/gestion-personal-info.component.css
+++ b/src/app/pages/gestion-cv/gestion-personal-info/gestion-personal-info.component.css
@@ -31,9 +31,7 @@
     background: rgba(255, 255, 255, 0.616);
     backdrop-filter: blur(10px);
   }
-  :host ::ng-deep .p-dropdown, .p-component, .p-dropdown-items-wrapper, .p-dropdown-items, .ng-tns-c72-1{
-    border-radius: 25px;
-  }
+
   .input-size{
     width: 30vw;
   }
@@ -186,3 +184,12 @@
     background-color: rgba(255, 255, 255, 0.719);
     backdrop-filter: blur(80px);
   }
+
+  
+
+  
+/* NG PRIME STYLING*/
+
+:host ::ng-deep .p-dropdown,:host ::ng-deep  .p-dropdown-items-wrapper, .p-dropdown-items, .ng-tns-c72-1{
+  border-radius: 25px;
+}
