--- a/src/app/pages/offres/offre/offre.component.css
+++ b/src/app/pages/offres/offre/offre.component.css
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,700,900,400italic,700italic,900italic);
 
-
-h1 {
+div{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+/* h1 {
   animation: text-shadow 1.5s ease-in-out infinite;
 
 }
@@ -70,7 +72,7 @@ a:hover {
     animation: none !important;
     transition: none !important;
   }
-}
+} */
 label{
   padding: 5px 10px;
 }
@@ -181,4 +183,99 @@ div{
 .p-justify-right {
   display: flex;
   justify-content:flex-end;
+}
+
+
+.details{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: fit-content;
+}
+.title{
+  color: #3771bd;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.card-single {
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(30px);
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  margin: 1vw;
+  border-radius: 30px;
+  box-shadow: 0 4px 4px 0 rgba(136, 136, 136, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.chip-wrapper {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+}
+.chip {
+  background: rgb(233, 233, 233);
+  font-weight: bold;
+  text-transform: capitalize;
+  color: #4b96ec;
+  height: fit-content;
+  width: fit-content;
+  padding: 2px;
+  margin: 0px 2px;
+  border-radius: 30px;
+}
+/* 
+.title{
+  color: #ffffffcc;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.card-single {
+  background: #3771bd;
+  backdrop-filter: blur(30px);
+  height: fit-content;
+  width: fit-content;
+  padding: 10px;
+  margin: 1vw;
+  border-radius: 30px;
+  box-shadow: 0 4px 4px 0 rgba(136, 136, 136, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.chip-wrapper {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+}
+.chip {
+  background: #4b96ec;
+  font-weight: bold;
+  text-transform: capitalize;
+  color: rgb(233, 233, 233);
+  height: fit-content;
+  width: fit-content;
+  padding: 2px;
+  margin: 0px 2px;
+  border-radius: 30px;
+} */
+
+
+
+
+.description-card {
+  background: hsla(0, 0%, 100%, 0.800);
+  backdrop-filter: blur(30px);
+  min-height: 10vh;
+  height: fit-content;
+  width: 98%;
+  padding: 10px;
+  margin: 60px 1%;
+  border-radius: 20px;
+  border: 1px #9de6fc solid;
+}
+
+.description-title{
+  color: #3771bd;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin-bottom: 10px;
 }
