--- a/src/app/pages/offres/offres.component.html
+++ b/src/app/pages/offres/offres.component.html
@@ -5,9 +5,8 @@
         class="p-button-danger p-button-rounded p-button-text "></button>
     </div>
     <p-scrollPanel [style]="{width: '100%', height: '90%'}">
-      <div *ngIf="clicked">
-        <app-offre></app-offre>
-      </div>
+      
+        <app-offre *ngIf="clicked" [offre]="currentOffre"></app-offre>
     </p-scrollPanel>
   </div>
 </div>
@@ -46,12 +45,14 @@
                   <img src="{{offre.employeur.logo}}" alt="">
                 </ng-template>
               </div>
-              <h3 style="text-transform: uppercase;">{{offre.employeur.nom_entreprise }}</h3>
+              <div class="p-justify-right">
+                <h3 style="text-transform: uppercase;">{{offre.employeur.nom_entreprise }}</h3>
+              </div>
             </div>
           </div>
           <div>
-            <span class="overflow" [innerHTML]="offre.description_emploi | slice:0:150 ">
-            </span>...
+            <span class="overflow" [innerHTML]="(offre.description_emploi | slice:0:150)+'...'">
+            </span>
           </div>
         </div>
         <div class="details">
@@ -75,7 +76,7 @@
           </div>
 
           <button pButton pRipple type="button" (click)="showDialog(offre)" label="Voir détails" icon="pi pi-eye"
-            class="p-button-text p-button-rounded"></button>
+            class="p-button-rounded"></button>
         </div>
       </div>
     </div>
